--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,7 @@ ul {
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
+    row-gap: 1rem;
 }
 
 
@@ -510,30 +511,7 @@ ul {
     color: white;
 }
 
-/* .html .background-img {
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/orange-bg.jpg');
-    background-image: linear-gradient(rgba(95, 95, 95, 0.3), rgba(102, 102, 102, 0.3));
-}
-
-.css .background-img {
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/skyblue-bg.jpg');
-    background-image: linear-gradient(rgba(95, 95, 95, 0.3), rgba(102, 102, 102, 0.3));
-}
-
-.js .background-img {
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../assets/yellow-bg.jpg');
-    background-image: linear-gradient(rgba(95, 95, 95, 0.3), rgba(102, 102, 102, 0.3));
-}
-
-.vs .background-img {
-    background-image: linear-gradient(rgba(95, 95, 95, 0.3), rgba(102, 102, 102, 0.3));
-}
-
-.github .background-img {
-    background-image: linear-gradient(rgba(95, 95, 95, 0.4), rgba(102, 102, 102, 0.4));
-} */
-
-.html .background-img, .css .background-img, .js .background-img , .vs .background-img, .github .background-img, .react .background-img{
+.technology > .background-img, .tool > .background-img {
     background-image: linear-gradient(rgba(95, 95, 95, 0.3), rgba(102, 102, 102, 0.3));
 }
 
@@ -790,7 +768,7 @@ footer {
     display: block;
     left: 50%;
     top: 50%;
-    font-size: clamp(1rem, 2.2vw, 2rem);
+    font-size: clamp(1rem, 1.9vw, 2rem);
     transform: translate(-50%, -50%);
 }
 
@@ -800,12 +778,15 @@ footer {
     align-items: center;
     opacity: 0;
     visibility: hidden;
-    margin-top: 3.5rem;
+    margin-top: min(50px, 18%);
+    font-size: clamp(.75rem, 1.5vw, 1.2rem);
 }
 
 .description-project {
     visibility: 0;
     opacity: 0;
+    font-size: clamp(.7rem, 1vw, .8rem);
+    text-align: start;
 }
 
 .project-card .title-project, .project-card-aside .title-project {
@@ -945,10 +926,28 @@ footer {
     }
 }
 
+@media (max-width: 460px) {
+    .technologies, .tools {
+        justify-content: start;
+        align-items: start;
+        flex-direction: row;
+    }
+
+    .technology, .tool {
+        width: fit-content;
+        padding: 1.2rem;
+        margin: .2rem;
+        flex: 1;
+    }
+
+    .technology:hover, .tool:hover {
+        transform: scale(1);
+    }
+}
+
 @media (max-width: 400px) {
     .about-me-img {
         min-width: 290px;
         max-height: 290px;
     }
 }
-
